objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Custom_ID__c</fullName>
        <label>Darujme.cz Custom ID (obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Project_ID__c</fullName>
        <label>Darujme.cz Project ID (obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Default_Transaction_Type__c</fullName>
        <description>Transakce automaticky zakládané k této kampani převezmou tento typ transakce.</description>
        <label>Default Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>peněžní dar</fullName>
                    <default>true</default>
                    <label>peněžní dar</label>
                </value>
                <value>
                    <fullName>nepeněžní dar</fullName>
                </value>
                <value>
                    <fullName>členský příspěvek</fullName>
                </value>
                <value>
                    <fullName>dotace/grant</fullName>
                </value>
                <value>
                    <fullName>protiplnění</fullName>
                </value>
                <value>
                    <fullName>ostatní</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Email_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Template</label>
        <referenceTo>CRMforNonProfit__Email_Template__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Nove_Project_Darujme_ID__c</fullName>
        <label>Project Darujme ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__PosledniCisloClenaKampane__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PosledniCisloClenaKampane</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Specific_Symbol__c</fullName>
        <label>Specific Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__TLF_Type__c</fullName>
        <label>TLF Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Up-Sell</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Reactivation</fullName>
                </value>
                <value>
                    <fullName>Cross-Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transactions_Total__c</fullName>
        <label>Transactions Total</label>
        <summarizedField>CRMforNonProfit__Transaction__c.CRMforNonProfit__Transaction_Amount__c</summarizedField>
        <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Variable_No__c</fullName>
        <label>Variable No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>